--- a/github/workflows/test.yml
+++ b/github/workflows/test.yml
@@ -17,10 +17,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install --no-cache 
 
       - name: Run tests
-        run: npm test
+        run: yarn run test
