--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/jest": "^30.0.0",
     "jest": "^30.1.3",
     "ts-jest": "^29.4.4"
+  },
+  "dependencies": {
+    "typescript": "^5.9.2"
   }
 }
